--- a/02_개정판/7_Best_Product/7_3_preprocessing.ipynb
+++ b/02_개정판/7_Best_Product/7_3_preprocessing.ipynb
@@ -66,6 +66,11 @@
    "outputs": [],
    "source": [
     "# 예제 7-19 첫 번째 제품의 스펙 목록 분리\n",
+    "\n",
+    "# 스펙 목록에서 탭과 개행 문자를 제거하는 코드를 상단에 추가 \n",
+    "data['스펙 목록'] = data['스펙 목록'].str.replace('\\t', '')\n",
+    "data['스펙 목록'] = data['스펙 목록'].str.replace('\\n', '')\n",
+    "\n",
     "spec_list = data['스펙 목록'][0].split(' / ')\n",
     "spec_list "
    ]
