다나와 크롤링 & 데이터 전처리 수정(사이트 업데이트 반영)

--- a/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
+++ b/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# 예제 7-7 스펙 목록 정보 가져오기\n",
-    "spec_list = prod_items[0].select('div.spec_list')[0].text.strip()\n",
+    "spec_list = prod_items[0].select('div.spec_list')[0].text.replace('\\t','').replace('\\n','')  # 수정버전(2022.05.19)\n",
     "print(spec_list)"
    ]
   },
@@ -130,9 +130,10 @@
     "        # ① 상품명 가져오기\n",
     "        title = prod_item.select('p.prod_name > a')[0].text.strip()\n",
     "        # ② 스펙 목록 가져오기\n",
-    "        spec_list = prod_item.select('div.spec_list')[0].text.strip()\n",
+    "        spec_list = prod_items[0].select('div.spec_list')[0].text.replace('\\t','').replace('\\n','')  # 수정버전(2022.05.19)\n",
     "        # ③ 가격 정보 가져오기 \n",
     "        price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\", \"\")\n",
+    "        \n",
     "        prod_data.append([title, spec_list, price])\n",
     "    except:\n",
     "        pass  # 진행시 에러가 발생할 경우(광고 상품 등) 넘어가기\n",
@@ -156,7 +157,7 @@
     "            # ① 상품명 가져오기\n",
     "            title = prod_item.select('p.prod_name > a')[0].text.strip()\n",
     "            # ② 스펙 목록 가져오기\n",
-    "            spec_list = prod_item.select('div.spec_list')[0].text.strip()\n",
+    "            spec_list = prod_items[0].select('div.spec_list')[0].text.replace('\\t','').replace('\\n','')  # 수정버전(2022.05.19)\n",
     "            # ③ 가격 정보 가져오기\n",
     "            price = prod_item.select('li.rank_one > p.price_sect > a > strong')[0].text.strip().replace(\",\", \"\")\n",
     "            prod_data.append([title, spec_list, price])\n",
@@ -258,9 +259,9 @@
     "from bs4 import BeautifulSoup\n",
     "from tqdm import tqdm_notebook\n",
     "\n",
-    "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
-    "# 암묵적으로 웹 자원 로드를 위해 3초까지 기다림\n",
-    "driver.implicitly_wait(3)\n",
+    "# driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
+    "# # 암묵적으로 웹 자원 로드를 위해 3초까지 기다림\n",
+    "# driver.implicitly_wait(3)\n",
     "\n",
     "keyword = '무선청소기'\n",
     "total_page = 10\n",
@@ -304,156 +305,6 @@
     "data.columns = ['상품명', '스펙 목록', '가격']\n",
     "data.to_excel('./files/1_danawa_crawling_result.xlsx', index = False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3.1 다나와 크롤링 데이터 불러오기 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-17 다나와 크롤링 결과 가져오기 \n",
-    "import pandas as pd\n",
-    "data = pd.read_excel('./files/1_danawa_crawling_result.xlsx')\n",
-    "data.info()\n",
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3.2 회사명, 모델명 정리 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-18 회사명 + 모델명 분리\n",
-    "company_list = []\n",
-    "product_list = []\n",
-    "for title in data['상품명']:\n",
-    "    title_info = title.split(' ', 1)\n",
-    "    company_name = title_info[0]\n",
-    "    product_name = title_info[1]\n",
-    "    company_list.append(company_name)\n",
-    "    product_list.append(product_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3.4 스펙 목록에서 카테고리, 사용시간, 흡입력을 추출해서 정리\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-19 첫 번째 제품의 스펙 목록 분리\n",
-    "spec_list = data['스펙 목록'][0].split(' / ')\n",
-    "spec_list "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-20 카테고리 정보 추출\n",
-    "category = spec_list[0] \n",
-    "category "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-21 ‘사용시간’, ‘흡입력’이 포함된 원소 추출 \n",
-    "for spec in spec_list:\n",
-    "    if '사용시간' in spec: \n",
-    "         use_time_spec = spec \n",
-    "    elif '흡입력' in spec:\n",
-    "        suction_spec = spec\n",
-    "        \n",
-    "print(use_time_spec)\n",
-    "print(suction_spec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-22 정량적인 수치 추출 \n",
-    "use_time_value = use_time_spec.split(' ')[1].strip() \n",
-    "suction_value = suction_spec.split(' ')[1].strip()\n",
-    "\n",
-    "print(use_time_value)\n",
-    "print(suction_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-23 카테고리, 사용시간, 흡입력 추출 \n",
-    "category_list = []\n",
-    "use_time_list = []\n",
-    "suction_list = [] \n",
-    "\n",
-    "for spec_data in data['스펙 목록']:\n",
-    "    # ' / ' 기준으로 스펙 분리하기 \n",
-    "    spec_list = spec_data.split(' / ')\n",
-    "    \n",
-    "    # 카테고리 추출하기\n",
-    "    category = spec_list[0] \n",
-    "    category_list.append(category)\n",
-    "    \n",
-    "    # 사용시간, 흡입력 추출 \n",
-    "    ## 사용시간, 흡입력 정보가 없는 제품을 위해 변수를 생성 \n",
-    "    use_time_value = None \n",
-    "    suction_value = None \n",
-    "    \n",
-    "    ## spec_list의 각 원소에서 사용시간, 흡입력 수치 추출\n",
-    "    for spec in spec_list:\n",
-    "        if '사용시간' in spec: \n",
-    "            use_time_value = spec.split(' ')[1].strip()             \n",
-    "        if '흡입력' in spec:\n",
-    "            suction_value = spec.split(' ')[1].strip() \n",
-    "    use_time_list.append(use_time_value)\n",
-    "    suction_list.append(suction_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 예제 7-24 카테고리, 사용시간, 흡입력에 대한 전처리 결과 확인\n",
-    "print(\"카테고리\", len(category_list), category_list[0:5])\n",
-    "print(\"사용시간\", len(use_time_list), use_time_list[0:5])\n",
-    "print(\"흡입력\", len(suction_list), suction_list[0:5])"
-   ]
   }
  ],
  "metadata": {
@@ -472,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
