--- a/02_개정판/7_Best_Product/7_3_preprocessing.ipynb
+++ b/02_개정판/7_Best_Product/7_3_preprocessing.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.3.4 스펙 목록에서 카테고리, 사용시간, 흡입력을 추출해서 정리\n"
+    "### 7.3.4 스펙 목록에서 카테고리, 사용시간, 흡입력을 추출해서 정리 \n"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "# 예제 7-24 카테고리, 사용시간, 흡입력에 대한 전처리 결과 확인\n",
     "print(\"카테고리\", len(category_list), category_list[0:5])\n",
     "print(\"사용시간\", len(use_time_list), use_time_list[0:5])\n",
-    "print(\"흡입력\", len(suction_value), suction_list[0:5])"
+    "print(\"흡입력\", len(suction_list), suction_list[0:5])  # 수정(2022.05.19)\n"
    ]
   },
   {
@@ -311,6 +311,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 추가.  가격 데이터 살펴보기 2022.05.19  \n",
+    "pd_data_final['가격'].unique()   # 이상값 확인  \"가격비교예정\" 제외 필요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 추가. \"가격비교예정\"  상품 제외하기 2022.05.19\n",
+    "cond = pd_data_final['가격'] != '가격비교예정'\n",
+    "pd_data_final = pd_data_final[cond]\n",
+    "pd_data_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 예제 7-33 엑셀로 저장\n",
     "pd_data_final.to_excel('./files/2_danawa_data_final.xlsx', index = False)"
    ]
@@ -339,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
