--- a/02_개정판/2_Data_Analysis_Basic/2_2_Crawling.ipynb
+++ b/02_개정판/2_Data_Analysis_Basic/2_2_Crawling.ipynb
@@ -50,14 +50,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://sites.google.com/a/chromium.org/chromedriver/downloads\n"
+      "https://sites.google.com/chromium.org/driver/\n"
      ]
     }
    ],
    "source": [
     "# 크롬드라이버 다운받기\n",
-    "# https://sites.google.com/a/chromium.org/chromedriver/downloads\n",
-    "print('https://sites.google.com/a/chromium.org/chromedriver/downloads')"
+    "# 크롬 다운로드 사이트 변경에 따른 주소 변경(updated 2022.10.01)\n",
+    "print('https://sites.google.com/chromium.org/driver/')"
    ]
   },
   {
@@ -1022,14 +1022,16 @@
    "outputs": [],
    "source": [
     "# 예제 2-64 멜론 인기차트 중 상위 50곡 크롤링(selenium만 활용)\n",
+    "# selenium 명령어 변경으로 코드 수정(updated 2022.10.01)   (변경전) find_elements_by_css_selector →    (변경후) find_elements\n",
+    "from selenium import webdriver\n",
     "driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')     \n",
     "url = 'http://www.melon.com/chart/index.htm'\n",
     "driver.get(url)          \n",
     "                                \n",
-    "songs = driver.find_elements_by_css_selector('tr')[1:]     # 멜론 사이트 개편으로 코드 수정(updated 2020.07.13)\n",
+    "songs = driver.find_elements( 'css selector', 'tr')[1:]     # 멜론 사이트 개편으로 코드 수정(updated 2020.07.13)\n",
     "for song in songs:                                        \n",
-    "    title = song.find_elements_by_css_selector('div.ellipsis.rank01 > span > a')[0].text\n",
-    "    singer = song.find_elements_by_css_selector('div.ellipsis.rank02 > a')[0].text  \n",
+    "    title = song.find_elements( 'css selector', 'div.ellipsis.rank01 > span > a')[0].text\n",
+    "    singer = song.find_elements( 'css selector', 'div.ellipsis.rank02 > a')[0].text  \n",
     "    print(title, singer, sep = ' | ')"
    ]
   }
@@ -1037,7 +1039,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1051,7 +1053,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
