--- a/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
+++ b/02_개정판/5_Jeju_Hotplace/5_1_Instagram_Crawling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,13 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 예제 5-6 HTML에서 첫번째 게시글 찾아 클릭하기\n",
+    "# 인스타그램 사이트 개편에 따른 태그 정보 수정(updated 2022.10.02)\n",
     "def select_first(driver):\n",
-    "    first = driver.find_element_by_css_selector(\"div._9AhH0\")\n",
+    "    first = driver.find_element('css selector', \"div._aabd._aa8k._aanf\")  # selenium 명령어 변경으로 인한 코드 수정 (updated 2022.10.01) \n",
     "    first.click()\n",
     "    time.sleep(3)\n",
     "    \n",
@@ -173,38 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['안녕하세요^^이춘옥의 원조!원조! 고등어쌈밥입니다.가끔은 어머니가 가게를 작게 하셨을때손님들과 이런저런 이야기도 나누고웃고 이 때가 그립다고 하시네요^^너무 바쁜여행일정이지만 한번쯤은 남들보다 천천히 여행을즐기는것도 재미있을듯해요♥𖤐 애월본점🚖위치:제주공항 10분 애월해안도로입구🕰시간:09:00~21:00(수휴무).𖤐 월정리점🚖위치: 제주시 구좌읍 월정중길 19-11🕰시간:09:00~20:00(목휴무).💡제주도 원조 고등어쌈밥 맛집💡가족끼리 가도 부담없는 맛과 양과 자리💡공항에서 15분거리..#애월맛집 #제주도맛집#제주시맛집 #제주공항근처맛집#이호테우해변맛집 #제주애월맛집#애월점심식사 #애월해안로도로맛집 #제주시맛있는집 #제주공항근처맛집추천 #애월바다 #제주저렴한맛집 #애월갈치조림',\n",
-       " '2020-08-09',\n",
-       " 0,\n",
-       " '',\n",
-       " ['#애월맛집',\n",
-       "  '#제주도맛집',\n",
-       "  '#제주시맛집',\n",
-       "  '#제주공항근처맛집',\n",
-       "  '#이호테우해변맛집',\n",
-       "  '#제주애월맛집',\n",
-       "  '#애월점심식사',\n",
-       "  '#애월해안로도로맛집',\n",
-       "  '#제주시맛있는집',\n",
-       "  '#제주공항근처맛집추천',\n",
-       "  '#애월바다',\n",
-       "  '#제주저렴한맛집',\n",
-       "  '#애월갈치조림']]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 예제 5-7 게시글 정보 가져오기\n",
+    "# 인스타그램 사이트 개편에 따른 태그 정보 수정(updated 2022.10.02)\n",
+    "\n",
     "import re\n",
     "from bs4 import BeautifulSoup\n",
     "import unicodedata\n",
@@ -215,22 +191,22 @@
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    # ② 본문 내용 가져오기\n",
     "    try:\n",
-    "        content = soup.select('div.C4VMK > span')[0].text\n",
+    "        content = soup.select('div._a9zs > span')[0].text  \n",
     "        content = unicodedata.normalize('NFC', content) \n",
     "    except:\n",
     "        content = ' '\n",
     "    # ③ 본문 내용에서 해시태그 가져오기(정규식 활용)\n",
     "    tags = re.findall(r'#[^\\s#,\\\\]+', content)  \n",
     "    # ④ 작성일자 정보 가져오기\n",
-    "    date = soup.select('time._1o9PC.Nzb55')[0]['datetime'][:10]\n",
+    "    date = soup.select('time._a9ze._a9zf')[0]['datetime'][:10]\n",
     "    # ⑤ 좋아요 수 가져오기\n",
     "    try:\n",
-    "        like = soup.select('div.Nm9Fw > button')[0].text[4:-1]   \n",
+    "        like = soup.select('div._aacl._aaco._aacw._aacx._aada._aade > span')[0].text\n",
     "    except:\n",
     "        like = 0\n",
     "    # ⑥ 위치정보 가져오기\n",
     "    try: \n",
-    "        place = soup.select('div.M30cS')[0].text\n",
+    "        place = soup.select('div._aaqm')[0].text\n",
     "        place = unicodedata.normalize('NFC', place)\n",
     "    except:\n",
     "        place = ''\n",
@@ -253,11 +229,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.find_elements('css selector', 'div._aaqg._aaqh > button._abl-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 예제 5-8 다음 게시글 열기\n",
     "def move_next(driver):\n",
-    "\n",
-    "    right = driver.find_element_by_css_selector ('a.coreSpriteRightPaginationArrow')\n",
+    "    # 인스타그램 사이트 개편에 따른 태그 정보 수정(updated 2022.10.02)\n",
+    "    right = driver.find_elements('css selector', 'div._aaqg._aaqh > button._abl-')[0]\n",
     "    right.click()\n",
     "    time.sleep(3)\n",
     "\n",
@@ -292,6 +284,7 @@
     "\n",
     "\n",
     "######## 인스타 계정 로그인이 필요합니다 #########\n",
+    "# 인스타그램 사이트 개편에 따른 태그 정보 수정(updated 2022.10.02)\n",
     "email = '인스타계정입력해주세요'   ### 계정 정보 수정 필요\n",
     "input_id = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[0]\n",
     "input_id.clear()\n",
@@ -301,7 +294,10 @@
     "input_pw = driver.find_elements_by_css_selector('input._2hvTZ.pexuQ.zyHYP')[1]\n",
     "input_pw.clear()\n",
     "input_pw.send_keys(password)\n",
-    "input_pw.submit()"
+    "input_pw.submit()\n",
+    "\n",
+    "time.sleep(5)\n",
+    "\n"
    ]
   },
   {
@@ -324,6 +320,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# 예제 5-10 인스타그램 크롤링  ②\n",
     "# ② 인스타그램 검색페이지 URL 만들기\n",
     "word = \"제주도맛집\"    #검색어\n",
@@ -331,7 +328,8 @@
     "\n",
     "# ③ 검색페이지 접속하기\n",
     "driver.get(url)\n",
-    "time.sleep(3)\n",
+    "time.sleep(5)\n",
+    "\n",
     "\n",
     "# ④ 첫 번째 게시글 열기\n",
     "select_first(driver)\n",
@@ -413,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -428,6 +426,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
