--- a/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
+++ b/02_개정판/6_Starbucks_Location/6_1_1_Crawling_Starbucks_List.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# 예제 6-3 webdriver로 ‘서울’ 버튼 요소를 찾아 클릭\n",
     "seoul_btn = '#container > div > form > fieldset > div > section > article.find_store_cont > article > article:nth-child(4) > div.loca_step1 > div.loca_step1_cont > ul > li:nth-child(1) > a'\n",
-    "driver.find_element_by_css_selector(seoul_btn).click()"
+    "driver.find_element('css selector', seoul_btn).click() # selenium 명령어 변경으로 인한 코드 수정 (updated 2022.10.03)"
    ]
   },
   {
@@ -52,8 +52,15 @@
    "source": [
     "# 예제 6-4  webdriver로 ‘전체’ 버튼 요소를 찾아 클릭\n",
     "all_btn = '#mCSB_2_container > ul > li:nth-child(1) > a'\n",
-    "driver.find_element_by_css_selector(all_btn).click()"
+    "driver.find_element('css selector', all_btn).click()  # selenium 명령어 변경으로 인한 코드 수정 (updated 2022.10.03)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -164,7 +171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -179,6 +186,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
