--- a/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
+++ b/02_개정판/7_Best_Product/7_1&2_Crawling.ipynb
@@ -233,9 +233,9 @@
    "source": [
     "# 예제 7-14 tqdm 사용법 \n",
     "import time\n",
-    "from tqdm import tqdm_notebook\n",
+    "from tqdm.notebook import tqdm  # tqdm 라이브러리 명령어 변경에 따른 코드 변경(2022.10.03)\n",
     "total_page = 10\n",
-    "for page in tqdm_notebook(range(1, total_page + 1)):\n",
+    "for page in tqdm(range(1, total_page + 1)):\n",
     "    # 페이지가 로딩 완료되기 위한 시간을 5초로 준다. \n",
     "    time.sleep(5)"
    ]
@@ -257,7 +257,7 @@
     "from selenium import webdriver\n",
     "import time\n",
     "from bs4 import BeautifulSoup\n",
-    "from tqdm import tqdm_notebook\n",
+    "from tqdm.notebook import tqdm  # tqdm 라이브러리 명령어 변경에 따른 코드 변경(2022.10.03)\n",
     "\n",
     "# driver = webdriver.Chrome('c:/playwithdata/chromedriver.exe')\n",
     "# # 암묵적으로 웹 자원 로드를 위해 3초까지 기다림\n",
@@ -267,7 +267,7 @@
     "total_page = 10\n",
     "prod_data_total = []\n",
     "# 진행 정도를 표현하는 tqdm을 적용 \n",
-    "for page in tqdm_notebook(range(1, total_page + 1)):\n",
+    "for page in tqdm(range(1, total_page + 1)):\n",
     "    # ① 검색 페이지 이동\n",
     "    url = get_search_page_url(keyword, page)\n",
     "    driver.get(url)\n",
@@ -309,7 +309,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -324,6 +324,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
